k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: fadysg/portfolio:14b29e7acfd1c99863a3adcc94409afd4aea2161
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
